--- a/packages/client/src/styles.css
+++ b/packages/client/src/styles.css
@@ -1,48 +1,3 @@
-/* https://www.joshwcomeau.com/css/custom-css-reset/*/
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "SF Pro", "SF Pro Display",
-    "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-}
-
-* {
-  margin: 0;
-}
-
-body {
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-}
-
-img,
-picture,
-video,
-canvas,
-svg {
-  display: block;
-  max-width: 100%;
-}
-
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  overflow-wrap: break-word;
-}
-
-#root,
-#__next {
-  isolation: isolate;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
